--- a/Admin/src/app/prices/prices.component.html
+++ b/Admin/src/app/prices/prices.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button color="primary" (click)="closeModal()">
-        <ion-icon slot="icon-only" name="close"></ion-icon> 
+        <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
 
@@ -13,7 +13,7 @@
 
 
 <ion-content *ngIf="!info">
-  
+
   <ion-item-group class="ion-margin-horizontal">
     <form [formGroup]="form">
 
@@ -22,35 +22,25 @@
       <div class="ion-margin-vertical">
 
         <ion-item>
-          <ion-input 
-            formControlName="email" 
-            placeholder="Name" 
-            type="text"
-            clearInput
-            minlength="1"
-            maxlength="50">
+          <ion-input formControlName="email" label="Name" labelPlacement="floating" placeholder="Name" type="text"
+            clearInput minlength="1" maxlength="50">
           </ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-input 
-            formControlName="address" 
-            placeholder="Amount" 
-            type="text"
-            clearInput
-            minlength="1"
-            maxlength="100">
+          <ion-input formControlName="address" label="Amount" labelPlacement="floating" placeholder="Amount" type="text"
+            clearInput minlength="1" maxlength="100">
           </ion-input>
         </ion-item>
-        
+
       </div>
     </form>
 
-   
+
   </ion-item-group>
 
 
- 
+
 </ion-content>
 
 
@@ -63,50 +53,40 @@
       <div class="ion-margin-vertical">
 
         <ion-item>
-          <ion-input 
-            formControlName="email" 
-            placeholder="{{info.name}}" 
-            type="text"
-            clearInput
-            minlength="1"
-            maxlength="50">
+          <ion-input formControlName="email" label="Name" labelPlacement="floating" placeholder="{{info.name}}"
+            type="text" clearInput minlength="1" maxlength="50">
           </ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-input 
-            formControlName="address" 
-            placeholder="{{info.amount}}" 
-            type="text"
-            clearInput
-            minlength="1"
-            maxlength="100">
+          <ion-input formControlName="address" label="Amount" labelPlacement="floating" placeholder="{{info.amount}}"
+            type="text" clearInput minlength="1" maxlength="100">
           </ion-input>
         </ion-item>
       </div>
     </form>
 
 
-   
+
   </ion-item-group>
 
 
- 
+
 </ion-content>
 
 
 
 <ion-footer>
 
-              <ion-button  *ngIf="!info" size="large" shape="round" color="primary" expand='block' (click)="processNow()">
-                  <ion-icon  slot="icon-only" name="create"></ion-icon> 
-                  Create
-              </ion-button>
+  <ion-button *ngIf="!info" size="large" shape="round" color="primary" expand='block' (click)="processNow()">
+    <ion-icon slot="icon-only" name="create"></ion-icon>
+    Create
+  </ion-button>
 
-              <ion-button  *ngIf="info" size="large" shape="round" color="primary" expand='block' (click)="EditNow()">
-                <ion-icon  slot="icon-only" name="checkmark-sharp"></ion-icon> 
-                Done
-            </ion-button>
-         
+  <ion-button *ngIf="info" size="large" shape="round" color="primary" expand='block' (click)="EditNow()">
+    <ion-icon slot="icon-only" name="checkmark-sharp"></ion-icon>
+    Done
+  </ion-button>
+
 
 </ion-footer>
