--- a/Driver/src/app/login/login.page.html
+++ b/Driver/src/app/login/login.page.html
@@ -10,17 +10,18 @@
 </ion-header>
 
 <ion-content class="ion-padding modern-content">
-  <ion-slides pager="true" [options]="slideOpts">
-    <ion-slide>
+  <swiper-container [pagination]="true" [autoplay]="{ delay: 3000 }">
+    <swiper-slide>
       <ion-img src="../assets/imgs/main.svg"></ion-img>
-    </ion-slide>
-    <ion-slide>
+    </swiper-slide>
+    <swiper-slide>
       <ion-img src="../assets/imgs/main1.svg"></ion-img>
-    </ion-slide>
-    <ion-slide>
+    </swiper-slide>
+    <swiper-slide>
       <ion-img src="../assets/imgs/main2.svg"></ion-img>
-    </ion-slide>
-  </ion-slides>
+    </swiper-slide>
+  </swiper-container>
+
   <!-- Login Form -->
   <div class="form-container">
     <form [formGroup]="form">
@@ -40,12 +41,13 @@
 
             <!-- Phone Number Input -->
             <div class="phone-input-wrapper">
-              <ion-input class="phone-input" type="tel" formControlName="phone"
-                [placeholder]="'MOBILE_NUMBER' | translate" [readonly]="isInTestMode" minlength="10" maxlength="11"
-                (ionFocus)="Show()" (ionBlur)="Hide()">
+              <ion-input class="phone-input" type="tel" formControlName="phone" [label]="'MOBILE_NUMBER' | translate"
+                labelPlacement="stacked" [readonly]="isInTestMode" minlength="10" maxlength="11" (ionFocus)="Show()"
+                (ionBlur)="Hide()">
               </ion-input>
             </div>
           </div>
+
 
           <!-- Validation Error -->
           <div class="validation-error" *ngIf="!form.get('phone').valid && form.get('phone').touched">
