--- a/Driver/src/global.scss
+++ b/Driver/src/global.scss
@@ -10,20 +10,16 @@
  */
 
 /* Core CSS required for Ionic components to work properly */
-@import "~@ionic/angular/css/core.css";
-
-/* Basic CSS for apps built with Ionic */
-@import "~@ionic/angular/css/normalize.css";
-@import "~@ionic/angular/css/structure.css";
-@import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
-
-/* Optional CSS utils that can be commented out */
-@import "~@ionic/angular/css/padding.css";
-@import "~@ionic/angular/css/float-elements.css";
-@import "~@ionic/angular/css/text-alignment.css";
-@import "~@ionic/angular/css/text-transformation.css";
-@import "~@ionic/angular/css/flex-utils.css";
+@import "@ionic/angular/css/core.css";
+@import "@ionic/angular/css/normalize.css";
+@import "@ionic/angular/css/structure.css";
+@import "@ionic/angular/css/typography.css";
+@import "@ionic/angular/css/display.css";
+@import "@ionic/angular/css/padding.css";
+@import "@ionic/angular/css/float-elements.css";
+@import "@ionic/angular/css/text-alignment.css";
+@import "@ionic/angular/css/text-transformation.css";
+@import "@ionic/angular/css/flex-utils.css";
 
 
 ion-header.md {
@@ -39,30 +35,27 @@ ion-header.md {
 //     ion-content{
 //         --ion-background-color: #1e1e1e;
 //     }
-    
+
 //     .default-alert{
 //         --background: #1e1e1e;  
 //         --border-radius:5px!important;
 //        }
-    
-      
+
+
 //        .sc-ion-alert-md-h {
 //         --background: #1e1e1e;
 //        }
 //     }
 
-#inbox-list{
+#inbox-list {
     --ion-background-color: white;
 }
 
-ion-button{
-    --box-shadow:none;
+ion-button {
+    --box-shadow: none;
 }
 
 
 .custom-toolbar-background {
     --background: none;
-  }
-  
-
-
+}
